--- a/index.html
+++ b/index.html
@@ -288,8 +288,9 @@
     <!-- Scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.8.5/d3.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
-    <script type="module" src="data.js"></script>
-    <script type="module" src="charts.js"></script>
-    <script type="module" src="main.js"></script>
+    <script type="module" src="js/server.js"></script>
+    <script type="module" src="js/data.js"></script>
+    <script type="module" src="js/charts.js"></script>
+    <script type="module" src="js/main.js"></script>
 </body>
 </html>
